# PingData

./: .gitignore  LICENSE  README.md  conda.yml  pyproject.toml
pingmapper/: class_sonObj.py
src/pingdata/: beam_data.py  cli.py  data.py  fread.py  humminbird.py  metadata.py  sonar_data.py  sonardata.py  structures.py
src/pingdata/readers/: metadata.py
