[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pingdata"  # Replace with your desired project name
version = "0.0.1"
description = "Python package for reading and exporting HumminBird data."
authors = [
    { name = "William F. Jenkins", email = "wfjenkins@ucsd.edu" }
]
dependencies = []  # Add any dependencies here
requires-python = "< 3.13"

[tool.setuptools.packages.find]
where = ["src"]  # Specifies where to find the package
