[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pingdata"
version = "0.0.2"
description = "Python package for reading and exporting HumminBird data."
authors = [
    { name = "William F. Jenkins", email = "wfjenkins@ucsd.edu" }
]
dependencies = ["h5py", "numpy", "pandas", "pip", "pyproj", "scipy"]
requires-python = "< 3.13"

[tool.setuptools.packages.find]
where = ["src"]  # Specifies where to find the package
